# SlideExpert

./: .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  deploy.sh  pyproject.toml  register_agent.py  requirements.txt  test_final_agent_behavior.py
slide_app/: .env.example  DESIGN.md  __init__.py  agent.py  agent_engine_app.py  agent_runtime_app.py  apply_pro_and_chart_fix.py  fast_api_app.py  fix_agent_rules.py  fix_agent_rules_v2.py  fix_agent_rules_v3.py  fix_agent_split.py  fix_presentation_id.py  fix_slide3_zindex.py  restore_tools_completely.py  tools.py
slide_app/app/: agent.py
slide_app/app_utils/: .requirements.txt  deploy.py  telemetry.py  typing.py
tests/: helpers.py
tests/integration/: test_agent.py  test_agent_runtime_app.py  test_server_e2e.py
